src/pymergetic/wasmmod/net/cdn/__exports__.h

/* DO NOT EDIT — generated by `pymergetic.util.gen` (live registry introspection).
 * Source of truth: pm_wasmmod_registry_* after PM_MOD_EXPORT_* / PM_MOD_EXPORT_RS! registration.
 */
#ifndef PYMERGETIC_WASMMOD_NET_CDN_EXPORT_H
#define PYMERGETIC_WASMMOD_NET_CDN_EXPORT_H

#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

void pm_wasmmod_net_cdn_configure(const char *, const char *);

void pm_wasmmod_net_cdn_reset(void);

int32_t pm_wasmmod_net_cdn_add(const char *, const char *);

int32_t pm_wasmmod_net_cdn_prepend(const char *, const char *);

int32_t pm_wasmmod_net_cdn_driver(void);

const char * pm_wasmmod_net_cdn_base(void);

uint32_t pm_wasmmod_net_cdn_base_count(void);

const char * pm_wasmmod_net_cdn_base_at(uint32_t);

int32_t pm_wasmmod_net_cdn_require_explicit_deps(void);

int32_t pm_wasmmod_net_cdn_fetch_pack(const char *, const char *, uint8_t **, uint32_t *, char *, size_t);

int32_t pm_wasmmod_net_cdn_fetch_pack_ex(const char *, const char *, uint8_t **, uint32_t *, char *, uint32_t, char *, size_t);

int32_t pm_wasmmod_net_cdn_fetch_index(const char *, uint8_t **, uint32_t *, char *, size_t);

int32_t pm_wasmmod_net_cdn_url_is_base(const char *);

const char * pm_wasmmod_net_cdn_driver_name(void);

void pm_wasmmod_net_cdn_set_session_id(const char *);

const char * pm_wasmmod_net_cdn_session_id(void);

int32_t pm_wasmmod_net_cdn_publish(const char *, const char *, const uint8_t *, uint32_t, int32_t, int32_t, const char *, char *, size_t);

#ifdef __cplusplus
}
#endif

#endif /* PYMERGETIC_WASMMOD_NET_CDN_EXPORT_H */