src/pymergetic/wasmmod/net/cdn/__exports__.rs

//! DO NOT EDIT — generated by `pymergetic.util.gen` (live registry introspection).

#![allow(non_camel_case_types)]

unsafe extern "C" {
    pub fn pm_wasmmod_net_cdn_configure(a0: *const u8, a1: *const u8);
    pub fn pm_wasmmod_net_cdn_reset();
    pub fn pm_wasmmod_net_cdn_add(a0: *const u8, a1: *const u8) -> i32;
    pub fn pm_wasmmod_net_cdn_prepend(a0: *const u8, a1: *const u8) -> i32;
    pub fn pm_wasmmod_net_cdn_driver() -> i32;
    pub fn pm_wasmmod_net_cdn_base() -> *const u8;
    pub fn pm_wasmmod_net_cdn_base_count() -> u32;
    pub fn pm_wasmmod_net_cdn_base_at(a0: u32) -> *const u8;
    pub fn pm_wasmmod_net_cdn_require_explicit_deps() -> i32;
    pub fn pm_wasmmod_net_cdn_fetch_pack(a0: *const u8, a1: *const u8, a2: *mut *mut u8, a3: *mut u32, a4: *mut u8, a5: usize) -> i32;
    pub fn pm_wasmmod_net_cdn_fetch_pack_ex(a0: *const u8, a1: *const u8, a2: *mut *mut u8, a3: *mut u32, a4: *mut u8, a5: u32, a6: *mut u8, a7: usize) -> i32;
    pub fn pm_wasmmod_net_cdn_fetch_index(a0: *const u8, a1: *mut *mut u8, a2: *mut u32, a3: *mut u8, a4: usize) -> i32;
    pub fn pm_wasmmod_net_cdn_url_is_base(a0: *const u8) -> i32;
    pub fn pm_wasmmod_net_cdn_driver_name() -> *const u8;
    pub fn pm_wasmmod_net_cdn_set_session_id(a0: *const u8);
    pub fn pm_wasmmod_net_cdn_session_id() -> *const u8;
    pub fn pm_wasmmod_net_cdn_publish(a0: *const u8, a1: *const u8, a2: *const u8, a3: u32, a4: i32, a5: i32, a6: *const u8, a7: *mut u8, a8: usize) -> i32;
}
